# mammoth-core

./: .env.example  .gitignore  AUDIT-REPORT.md  README.md
contracts/: .gitkeep
contracts/mammoth_core/: Anchor.toml  anza-install.ps1  build_check.sh  deploy.sh  install_deps.sh  package.json  run_tests.sh
contracts/mammoth_core/programs/mammoth_core/: Cargo.toml  typescript
contracts/mammoth_core/programs/mammoth_core/src/: lib.rs
contracts/mammoth_core/tests/: devnet-smoke.ts  integration.ts  mammoth_core.ts
docs/: contract-1-spl-token.md  ui-map.md
frontend/: .gitkeep
